- Unit 4: upload data from the json file

--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,4 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/db_java_t3h_module3
+
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
